<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_OutfeedCommand" Id="{ff716230-e110-4091-bdf9-7b5f788623cb}">
    <Declaration><![CDATA[TYPE ST_OutfeedCommand :
	STRUCT
		StartConveyor : bool;
		StopConveyor : BOOL;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>