<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_OutfeedConfig" Id="{a1ee704e-b6d0-4e50-8d9c-c5e1a8d30a51}">
    <Declaration><![CDATA[TYPE ST_OutfeedConfig :
	STRUCT
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>