<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_OutfeedRecipe" Id="{fecf807a-0eaf-4706-b6a8-557ca8ab28bc}">
    <Declaration><![CDATA[TYPE ST_OutfeedRecipe :
	STRUCT
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>